--- a/HaiTeBooks_Backend/src/main/resources/application.properties
+++ b/HaiTeBooks_Backend/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.springframework.security=DEBUG
 
 # Server port
+server.address=0.0.0.0
 server.port=8080
 
 # JWT config
@@ -23,3 +24,8 @@ app.jwt.expiration-ms=86400000
 # AI configuration
 cohere.api.key=${COHERE_API_KEY}
 
+# ? Environment config
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+# m?c ??nh là dev n?u .env ch?a có
+frontend.url=${FRONTEND_URL:http://localhost:5173}
+# FE dev url m?c ??nh
